--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "@types/jest": "^25.1.4",
     "@types/node": "^13.9.2",
     "@types/react": "^16.9.25",
@@ -13,6 +14,7 @@
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "merge": "^1.2.1",
+    "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "oidc-client": "^1.10.1",
     "react": "^16.13.1",
